--- a/app/src/main/res/layout/account_item.xml
+++ b/app/src/main/res/layout/account_item.xml
@@ -4,13 +4,11 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
 
-    <TextView
+    <ImageView
         android:id="@+id/kind"
-        style="@style/row_title_small"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textColor="@color/colorKind"/>
+        android:layout_height="match_parent"
+        android:src="@drawable/ic_income_black_24dp" />
 
     <TextView
         android:id="@+id/currency"
