--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,5 @@
     <color name="currencyUSD">#43aa43</color>
     <color name="currencyEUR">#8383cc</color>
 
-    <color name="colorKind">#808080</color>
+    <color name="colorKind">#A0A080</color>
 </resources>
