--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,8 @@
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorGray">
+            style="@style/AppTabLayout"
+            app:tabTextAppearance="@style/AppTabTextAppearance">
         </android.support.design.widget.TabLayout>
 
         <android.support.v4.view.ViewPager
