--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="colorGray">#D8D8D8</color>
+    <color name="colorGray">#d8d8d8</color>
     <color name="buttonLabel">#d3d3d3</color>
 
     <color name="currencyRUR">#cc8383</color>
